--- a/src/components/SelectableTreeView/package.json
+++ b/src/components/SelectableTreeView/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@your-org/selectable-tree-view",
-  "version": "1.0.0",
+  "name": "selectable-tree-view",
+  "version": "1.0.1",
   "description": "A production-ready hierarchical tree component with checkboxes, config synchronization, and lazy loading",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "tsc && npm run copy-css",
-    "copy-css": "cp SelectableTree.css dist/",
+    "copy-css": "cp src/SelectableTree.css dist/src/",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no tests specified\" && exit 1"
   },
@@ -27,7 +27,7 @@
     "typescript",
     "config-sync"
   ],
-  "author": "Your Name <your.email@example.com>",
+  "author": "Vladimir Gorobets <vladimir.gorobets@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
@@ -40,10 +40,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/selectable-tree-view.git"
+    "url": "https://github.com/gorets/directory-tree.git"
   },
   "bugs": {
-    "url": "https://github.com/your-org/selectable-tree-view/issues"
+    "url": "https://github.com/gorets/directory-tree/issues"
   },
-  "homepage": "https://github.com/your-org/selectable-tree-view#readme"
+  "homepage": "https://github.com/gorets/directory-tree#readme"
 }
