--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "publish:SelectableTreeView": "cd src/components/SelectableTreeView && npm run build && && npm version patch && npm publish --access public"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
